--- a/cadastrar.html
+++ b/cadastrar.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
-<body class="loginout-body">
+<body>
 
     <header class="fixed-top" id="navbar">
         <div class="bg_navbar">
@@ -92,86 +92,26 @@
 
     <section>
         <div class="bg-loginout-section d-flex">
-            <div class="container bg-loginout">
+            <div class="container bg-loginout my-auto">
                 <div class="row">
                     <div class="col-12">
                         <div>
-                            <div class="d-flex">
-                                <a href="cadastrar-motorista.html" class="btn btn-danger btn-loginout noActive souMotorista" type="submit" role="button"
-                                    title="Enviar">
-                                    Sou Motorista
-                                </a>
-                                <a href="#" class="btn btn-danger btn-loginout active souEmpresa " type="submit" role="button"
-                                    title="Enviar">
-                                    Sou Empresa
-                                </a>
-                            </div>
-                            <h2>
+                            <h1>
                                 Cadastrar
-                            </h2>
-                            <form>
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="nome" name="nome"
-                                                placeholder="Pedro Guilherme">
-                                            <label for="nome">Nome</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" name="email"
-                                                placeholder="Pedro Guilherme">
-                                            <label for="email">Email</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="form-floating">
-                                            <input type="number" class="form-control" id="cellphone" name="cellphone"
-                                                placeholder="912345678">
-                                            <label for="cellphone">CNPJ</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="form-floating">
-                                            <input type="number" class="form-control" id="cellphone" name="cellphone"
-                                                placeholder="912345678">
-                                            <label for="cellphone">Celular</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="password" class="form-control" id="password" name="password"
-                                                placeholder="MyPasSwOrD@123">
-                                            <label for="password">Senha</label>
-                                            <span href="#" style="float: right; margin-top: -56px;
-                                            transform: translate(-16px, 0);"><i class="fa fa-eye-slash password"
-                                                    aria-hidden="true"></i></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="password" class="form-control" id="confirm-password"
-                                                name="confirm-password" placeholder="MyPasSwOrD@123">
-                                            <label for="confirm-password">Confirmar Senha</label>
-                                            <span href="#" style="float: right; margin-top: -56px;
-                                            transform: translate(-16px, 0);"><i
-                                                    class="fa fa-eye-slash confirm-password"
-                                                    aria-hidden="true"></i></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                            <div class="d-flex">
-                                <button class="btn btn-danger btn-loginout anim-botao" type="submit" role="button"
+                            </h1>
+                            <div class="d-block w-100">
+                                <a href="cadastrar-motorista.html" class="btn btn-danger btn-loginout anim-botao" type="submit" role="button"
                                     title="Enviar">
-                                    Cadastrar
-                                </button>
+                                    Cadastrar-se como Motorista
+                                </a>
+                                <a href="cadastrar-empresa.html" class="btn btn-danger btn-loginout empresa anim-botao" type="submit" role="button"
+                                    title="Enviar">
+                                    Cadastrar-se como Empresa
+                                </a>
                             </div>
                         </div>
                         <div class="justify-content-center d-flex">
-                            <a href="entrar-empresa.html" class="text-center loginout-infos">Já possui uma conta? Clique
-                                aqui para entrar</a>
+                            <a href="entrar.html" class="text-center loginout-infos">Já possui uma conta? Clique aqui para entrar.</a>
                         </div>
                     </div>
                 </div>
