--- a/cotacao.html
+++ b/cotacao.html
@@ -185,7 +185,7 @@
                         </div>
 
                         <div class="d-block w-50 mx-auto">
-                            <button class="btn btn-danger btn-loginout anim-botao" type="submit" role="button">
+                            <button class="btn btn-danger btn-cotacao anim-botao" type="submit" role="button">
                                 Enviar
                             </button>
                         </div>
@@ -200,10 +200,10 @@
             <div class="container">
                 <div class="col-12">
                     <h3 class="text-center">Nossas empresas</h3>
-                    <div class="justify-content-around d-flex mx-5">
+                    <div class="justify-content-around d-flex mx-xl-5 mx-0">
                         <picture>
                             <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
-                            <h4 class="text-center">Alvorada</h4>
+                            <h4>Alvorada</h4>
                         </picture>
                         <picture>
                             <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
@@ -214,7 +214,7 @@
                             <h4>Alvorada</h4>
                         </picture>
                     </div>
-                    <div class="justify-content-around d-flex mx-5">
+                    <div class="justify-content-around d-flex mx-xl-5 mx-0">
                         <picture>
                             <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
                             <h4>Alvorada</h4>
